--- a/Cluster_Test/Cluster_Test.vcxproj.filters
+++ b/Cluster_Test/Cluster_Test.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="ClusterAlgo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FFT_WIKI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ClusterAlgo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FFT_WIKI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
