--- a/Cluster_Test/Cluster_Test.vcxproj.filters
+++ b/Cluster_Test/Cluster_Test.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="FFT_WIKI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GlassInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FFT_WIKI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GlassInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
