--- a/Cluster_Test/Cluster_Test.vcxproj
+++ b/Cluster_Test/Cluster_Test.vcxproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FFT_WIKI.h" />
+    <ClInclude Include="GlassInterface.h" />
     <ClInclude Include="Header.h" />
     <ClInclude Include="ClusterAlgo.h" />
     <ClInclude Include="IRISInterface.h" />
@@ -88,6 +89,7 @@
     <ClCompile Include="ClusterAlgo.cpp" />
     <ClCompile Include="Cluster_Test.cpp" />
     <ClCompile Include="FFT_WIKI.cpp" />
+    <ClCompile Include="GlassInterface.cpp" />
     <ClCompile Include="IRISInterface.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
